Fix button styles on small screens for councils page.

--- a/css/src/_template-council.scss
+++ b/css/src/_template-council.scss
@@ -28,6 +28,8 @@
 		.btn {
 			border-radius: 0;
 			padding: 20px 0;
+			display: block;
+			margin-bottom: 0;
 		}
 	}
 
